--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-plugin-typography": "^2.3.15",
+    "gatsby-source-contentful": "^2.1.57",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.1",
     "prop-types": "^15.7.2",
@@ -23,7 +24,8 @@
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "styled-components": "^4.4.1",
-    "typography": "^0.16.19"
+    "typography": "^0.16.19",
+    "youtube-embed-video": "^1.2.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
