imported contact form

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.6",
+    "gatsby-background-image": "^0.8.19",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-offline": "^3.0.17",
@@ -22,6 +23,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-hook-form": "^3.28.1",
     "react-typography": "^0.16.19",
     "styled-components": "^4.4.1",
     "typography": "^0.16.19",
