--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-hook-form": "^3.28.1",
+    "react-images": "^1.0.0",
+    "react-modal": "^3.11.1",
+    "react-photo-gallery": "^8.0.0",
     "react-typography": "^0.16.19",
     "styled-components": "^4.4.1",
     "typography": "^0.16.19",
