--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "styled-components": "^4.4.1",
     "typography": "^0.16.19",
     "typography-theme-noriega": "^0.16.19",
+    "typography-theme-sutro": "^0.16.19",
     "youtube-embed-video": "^1.2.1"
   },
   "devDependencies": {
