--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "PraecorLoth@gmail.com",
   "dependencies": {
     "@coreui/icons": "^1.0.0",
     "babel-plugin-styled-components": "^1.10.6",
