--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.17.6",
     "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-react-helmet": "^3.1.13",
